# gams-cpp

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG  CMakeInclude.txt  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  cat.exe.stackdump  dependency.pri  gams-cpp.pro  gamsdependency.pri  include.cmake  include.cmake.autosave  jenkinsfile  version  version.cmake
examples/: CMakeLists.txt  CMakeLists.txt.autosave  CPPex3.gms  CPPex3.lst  README.md  examples-vs2013.sln  examples-vs2015.sln  examples-vs2017.sln  examples-vs2019.sln  examples-vs2022.sln  examples.pri  examples.pro  include.cmake  main.cpp  qt-vs2015.props  qt-vs2017.props  qt.props
examples/DomainChecking/: domainchecking.cpp  domainchecking.h  main.cpp
examples/Transport/: transport.cpp  transport.h
examples/Transport1/: main.cpp  transport1.cpp  transport1.h
examples/Transport10/: main.cpp  transport10.cpp  transport10.h
examples/Transport11/: main.cpp  transport11.cpp  transport11.h
examples/Transport12/: main.cpp  transport12.cpp  transport12.h
examples/Transport13/: main.cpp  transport13.cpp  transport13.h
examples/Transport14/: main.cpp  transport14.cpp  transport14.h
examples/Transport2/: main.cpp  transport2.cpp  transport2.h
examples/Transport3/: main.cpp  transport3.cpp  transport3.h
examples/Transport4/: main.cpp  transport4.cpp  transport4.h
examples/Transport5/: main.cpp  transport5.cpp  transport5.h
examples/Transport6/: main.cpp  transport6.cpp  transport6.h
examples/Transport7/: main.cpp  transport7.cpp  transport7.h
examples/Transport8/: main.cpp  transport8.cpp  transport8.h
examples/Transport9/: main.cpp  transport9.cpp  transport9.h
examples/Warehouse/: main.cpp  warehouse.cpp  warehouse.h
examples/domainchecking/: CMakeLists.txt  DomainChecking-vs2013.vcxproj  DomainChecking-vs2015.vcxproj  DomainChecking-vs2017.vcxproj  DomainChecking-vs2019.vcxproj  DomainChecking-vs2022.vcxproj  domainchecking.cpp  domainchecking.pro
examples/transport/: CMakeLists.txt  transport.cpp  transport.h
examples/transport1/: CMakeLists.txt  Transport1-vs2013.vcxproj  Transport1-vs2015.vcxproj  Transport1-vs2017.vcxproj  Transport1-vs2019.vcxproj  Transport1-vs2022.vcxproj  transport1.cpp  transport1.pro
examples/transport10/: CMakeLists.txt  Transport10-vs2013.vcxproj  Transport10-vs2015.vcxproj  Transport10-vs2017.vcxproj  Transport10-vs2019.vcxproj  Transport10-vs2022.vcxproj  transport10.cpp  transport10.pro
examples/transport11/: CMakeLists.txt  Transport11-vs2013.vcxproj  Transport11-vs2015.vcxproj  Transport11-vs2017.vcxproj  Transport11-vs2019.vcxproj  Transport11-vs2022.vcxproj  transport11.cpp  transport11.pro
examples/transport12/: CMakeLists.txt  Transport12-vs2013.vcxproj  Transport12-vs2015.vcxproj  Transport12-vs2017.vcxproj  Transport12-vs2019.vcxproj  Transport12-vs2022.vcxproj  transport12.cpp  transport12.pro
examples/transport13/: CMakeLists.txt  Transport13-vs2013.vcxproj  Transport13-vs2015.vcxproj  Transport13-vs2017.vcxproj  Transport13-vs2019.vcxproj  Transport13-vs2022.vcxproj  transport13.cpp  transport13.pro
examples/transport14/: CMakeLists.txt  Transport14-vs2013.vcxproj  Transport14-vs2015.vcxproj  Transport14-vs2017.vcxproj  Transport14-vs2019.vcxproj  Transport14-vs2022.vcxproj  optimizer.cpp  optimizer.h  transport14.cpp  transport14.pro
examples/transport2/: CMakeLists.txt  Transport2-vs2013.vcxproj  Transport2-vs2015.vcxproj  Transport2-vs2017.vcxproj  Transport2-vs2019.vcxproj  Transport2-vs2022.vcxproj  transport2.cpp  transport2.pro
examples/transport3/: CMakeLists.txt  Transport3-vs2013.vcxproj  Transport3-vs2015.vcxproj  Transport3-vs2017.vcxproj  Transport3-vs2019.vcxproj  Transport3-vs2022.vcxproj  transport3.cpp  transport3.pro
examples/transport4/: CMakeLists.txt  Transport4-vs2013.vcxproj  Transport4-vs2015.vcxproj  Transport4-vs2017.vcxproj  Transport4-vs2019.vcxproj  Transport4-vs2022.vcxproj  transport4.cpp  transport4.pro
examples/transport5/: CMakeLists.txt  Transport5-vs2013.vcxproj  Transport5-vs2015.vcxproj  Transport5-vs2017.vcxproj  Transport5-vs2019.vcxproj  Transport5-vs2022.vcxproj  transport5.cpp  transport5.pro
examples/transport6/: CMakeLists.txt  Transport6-vs2013.vcxproj  Transport6-vs2015.vcxproj  Transport6-vs2017.vcxproj  Transport6-vs2019.vcxproj  Transport6-vs2022.vcxproj  transport6.cpp  transport6.pro
examples/transport7/: CMakeLists.txt  Transport7-vs2013.vcxproj  Transport7-vs2015.vcxproj  Transport7-vs2017.vcxproj  Transport7-vs2019.vcxproj  Transport7-vs2022.vcxproj  transport7.cpp  transport7.pro
examples/transport8/: CMakeLists.txt  Transport8-vs2013.vcxproj  Transport8-vs2015.vcxproj  Transport8-vs2017.vcxproj  Transport8-vs2019.vcxproj  Transport8-vs2022.vcxproj  transport8.cpp  transport8.pro
examples/transport9/: CMakeLists.txt  Transport9-vs2013.vcxproj  Transport9-vs2015.vcxproj  Transport9-vs2017.vcxproj  Transport9-vs2019.vcxproj  Transport9-vs2022.vcxproj  transport9.cpp  transport9.pro
examples/transportEngine/: CMakeLists.txt  TransportEngine-vs2017.vcxproj  TransportEngine-vs2019.vcxproj  TransportEngine-vs2022.vcxproj  (+1 more)
src/: CMakeLists.txt  coreclasses.qmodel  gams.h  gamscheckpoint.cpp  gamscheckpoint.h  gamscheckpointimpl.cpp  gamscheckpointimpl.h  gamscpp.pri  gamscpp.pro  gamscpp.pro.orig  gamscpp.qmodel  gamsdatabase.cpp  gamsdatabase.h  gamsdatabasedomainviolation.cpp  gamsdatabasedomainviolation.h  gamsdatabasedomainviolationimpl.cpp  gamsdatabasedomainviolationimpl.h  gamsdatabaseimpl.cpp  gamsdatabaseimpl.h  gamsdatabaseiter.cpp  gamsdatabaseiter.h  gamsdomain.cpp  gamsdomain.h  gamsdomainimpl.cpp  gamsdomainimpl.h  gamsengineconfiguration.cpp  gamsengineconfiguration.h  gamsenginejob.cpp  gamsenginejob.h  gamsenum.cpp  gamsenum.h  gamsequation.cpp  gamsequation.h  gamsequationrecord.cpp  gamsequationrecord.h  gamsexception.cpp  gamsexception.h  gamsexceptionexecution.cpp  gamsexceptionexecution.h  gamsjob.cpp  (+71 more)
tests/: CMakeLists.txt  README.md  include.cmake  testgamsobject.cpp  testgamsobject.h  tests.pri  tests.pro
(+199 files in other folders)
