#
# GAMS - General Algebraic Modeling System C++ API
#
# Copyright (c) 2017-2020 GAMS Software GmbH <support@gams.com>
# Copyright (c) 2017-2020 GAMS Development Corp. <support@gams.com>
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
#
project(tests)

add_subdirectory(testgamscheckpoint)
#add_subdirectory(testgamsdatabase)
#add_subdirectory(testgamsdatabasedomainviolation)
#add_subdirectory(testgamsdatabaseiter)
#add_subdirectory(testgamsdomain)
#add_subdirectory(testgamsenum)
#add_subdirectory(testgamsequation)
#add_subdirectory(testgamsequationrecord)
#add_subdirectory(testgamsexception)
#add_subdirectory(testgamsexceptionexecution)
#add_subdirectory(testgamsjob)
#add_subdirectory(testgamsmodelinstance)
#add_subdirectory(testgamsmodelinstanceopt)
#add_subdirectory(testgamsmodifier)
#add_subdirectory(testgamsparameter)
#add_subdirectory(testgamsparameterrecord)
#add_subdirectory(testgamsset)
#add_subdirectory(testgamssetrecord)
#add_subdirectory(testgamssymbol)
#add_subdirectory(testgamssymboldomainviolation)
#add_subdirectory(testgamssymboliter)
#add_subdirectory(testgamssymbolrecord)
#add_subdirectory(testgamsvariable)
#add_subdirectory(testgamsvariablerecord)
#add_subdirectory(testgamsworkspace)
#add_subdirectory(testgamsworkspaceinfo)
