cmake_minimum_required(VERSION 3.1)

project(transport14 C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/../../C/api"
    "${CMAKE_CURRENT_SOURCE_DIR}/../api")

IF (WIN32)
  SET(VSVERSION "vs2017" CACHE STRING "Visual Studio version")
  LINK_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/../lib/${VSVERSION}")
ELSE()
  LINK_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/../lib")
ENDIF()

add_executable(${PROJECT_NAME}
    "optimizer.h"
    "optimizer.cpp"
    "transport14.cpp")

IF (WIN32)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} gamscpp)
ELSEIF(UNIX)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} gamscpp pthread)
ENDIF()
